--- a/mimic_0.css
+++ b/mimic_0.css
@@ -3,4 +3,73 @@
     padding:0px;
     --font_0:Roboto;
     --font_1:Lato;
-}git stat
+    
+    
+}
+#header{
+    height:8vh;
+    width:100vw;
+    position:fixed;
+    
+}
+#header ul{
+    height:100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.2);
+}
+#header ul a{
+    margin:0px 10px;
+}
+#header ul a li{
+    list-style-type:none;
+}
+
+#main{
+    display:flex;
+    width:600%;
+    overflow-x:hidden;
+}
+
+#one{
+    height:100vh;
+    width:100vw;
+    background-color:red;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#two{
+    height:100vh;
+    width:100vw;
+    background-color:orange;
+}
+
+#three{
+    height:100vh;
+    width:100vw;
+    background-color:yellow;
+}
+
+#four{
+    height:100vh;
+    width:100vw;
+    background-color:green;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#five{
+    height:100vh;
+    width:100vw;
+    background-color:blue;
+}
+
+#six{
+    height:100vh;
+    width:100vw;
+    background-color:purple;
+}
